Fix overflow scroll on desktop nav

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2303,7 +2303,11 @@ textarea:focus:-ms-input-placeholder {
   height: 100vh;
   background-color: #ffffff;
   padding: 25vh calc(16px + 10vw) 0;
-  overflow-x: scroll;
+}
+@media (max-width: 959px) {
+  .genesis-responsive-menu {
+    overflow-x: scroll;
+  }
 }
 
 .genesis-responsive-menu .genesis-nav-menu .menu-item:hover > .sub-menu {
